k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slotlist-frontend
  namespace: slotlist
  labels:
    app: slotlist-frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: slotlist-frontend
